--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -641,7 +641,7 @@ $togglerMenu: #aaaaaa;
         display: inline-block;
         .projectImage {
           width: 100%;
-          object-fit: cover;
+          height: 100%;
         }
         .projectTitles {
           margin: 30px 0;
