--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -816,7 +816,7 @@ $togglerMenu: #aaaaaa;
     .setupImage {
       img {
         width: 70%;
-        object-fit: cover;
+        height: 70%;
         margin-top: 50px;
       }
     }
