--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -266,6 +266,7 @@ nav.fixed {
     img {
       margin-top: 100px;
       width: 50%;
+      object-fit: cover;
       border-radius: 10px;
     }
   }
