zmiana text-align

--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -43,6 +43,7 @@ $togglerMenu: #aaaaaa;
         font-size: 20px !important;
         width: 75% !important;
         margin: 15px 0 25px !important;
+        text-align: left;
       }
       .buttons {
         .linkBtn {
