--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -866,6 +866,7 @@ $togglerMenu: #aaaaaa;
         width: 100%;
         margin: 0;
         padding: 0 15px;
+        font-size: 15px;
 
         div {
           padding: 30px 0;
