--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -401,7 +401,7 @@ $togglerMenu: #aaaaaa;
           .projectTitles {
             .projectAbout {
               .projectDesc {
-                width: 75%;
+                // width: 75%;
               }
             }
           }
@@ -436,7 +436,7 @@ $togglerMenu: #aaaaaa;
             }
             .projectDesc {
               font-size: 18px;
-              width: 75%;
+              // width: 75%;
             }
           }
         }
@@ -455,7 +455,7 @@ $togglerMenu: #aaaaaa;
           .projectTitles {
             .projectAbout {
               .projectDesc {
-                width: 75%;
+                // width: 75%;
               }
             }
           }
